--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
         {
           "js": ["content.js"],
           "matches": [
-            "*://*.lightning.force.com/lightning/setup/*",
+            "*://*.lightning.force.com/lightning/*",
             "*://*.salesforce-setup.com/lightning/setup/*"
           ],
           "run_at": "document_end"
